# TYPHON

./: .gitignore  README.md  pyproject.toml
configs/: README.md
configs/baselines/: attention_baseline.json  gated_deltanet_fla.json  reproduction_matrix.json
configs/benchmarks/: babilong.json  evo_memory.json  locomo.json  locomo_plus.json  longbench.json  longbench_v2.json  memorybench.json  zeroscrolls.json
configs/live_eval/: lmstudio_qwen35_9b_vlm.json
configs/runtime/: default_workstation.json  rtx3080_10gb.json
configs/typhon/: typhon_v0.json
data/: README.md
data/imports/: evo_memory_seed_v1.jsonl  memorybench_seed_v1.jsonl
docs/: BENCHMARK_PACKS.md  README.md  SOTA_MODEL_BACKENDS.md  TECHNICAL_PM_BRIEF.md  TYPHON_CURSOR_HANDOFF.md  WSL_RUNTIME.md  decision-log.md  experiment-matrix.md
docs/adr/: 0001-pytorch-first-research-substrate.md  0002-json-configs-and-uv-tooling.md  0003-deterministic-harness-and-heuristic-v0-before-learned-memory.md  0004-manifest-backed-benchmark-packs.md  0005-wsl-first-linux-runtimes-and-openai-compatible-backends.md  0006-longbench-as-the-first-upstream-benchmark-adapter.md  0007-first-external-baseline-via-wsl-backed-gated-deltanet-and-fla.md  0008-structured-documentation-tree-and-folder-governance.md  README.md
docs/architecture/: system-overview.md
docs/archive/: decision-log-legacy.md
docs/project/: cursor-handoff.md  experiment-matrix.md  technical-pm-brief.md
docs/research/: sota-model-backends.md
docs/runbooks/: benchmark-packs.md  (+1 more)
notebooks/: README.md
results/: README.md
scripts/: README.md
(+77 files in other folders)
