[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "typhon"
version = "0.1.0"
description = "Research substrate for hierarchical cross-episodic associative memory."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
adapter_hf = ["datasets>=2.19,<4"]

[project.scripts]
typhon = "typhon.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
